[tool.poetry]
name = "temv"
version = "0.1.0"
description = ""
authors = ["Ben Trinh <6076614+huantrinh1802@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
temv = 'src.app:main'

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
