[project]
name = "secret_template_renderer"
version = "0.2.5"
description = "A tool for templating .env files and more."
readme = "README.md"
authors = [
  { name = "Ben Trinh", email = "huantrinh1802@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["template", "management", "jinja2", "secrets", "dotenv", ".env"]
license = { text = "MIT" } # Optional, but recommended

# Standard PEP 621 dependency table
dependencies = [
  "jinja2>=3.1.5",
]

[project.optional-dependencies]
crypto = ["cryptography"]

[project.scripts]
str = "src.app:main"

[project.urls]
Homepage = "https://github.com/huantrinh1802/secret_template_renderer"
Issues = "https://github.com/huantrinh1802/secret_template_renderer/issues"

[dependency-groups]
dev = [
  "ruff>=0.11.2",
]

# Packaging behavior (PEP 621) — keep this
[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

